--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "Adrian Wyss",
   "license": "ISC",
   "dependencies": {
-    "midata": "git+https://github.com/i4mi/midata.js.git"
+    "midata": "git+https://github.com/i4mi/midata.js.git",
+    "webpack": "^2.1.0-beta.13"
   },
   "devDependencies": {
     "ts-loader": "^2.0.3",
